--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
 <body>
-<h1>hello</h1>
+<h1>hello, my name is Drake Nunnery</h1>
+  <p>
+    I am from Prestonsburg Kentucky and decided to attend Centre this Fall. 
+  </p>
 </body>
 </html>
